--- a/components/wiki/test/wikisearchoptions.lfm
+++ b/components/wiki/test/wikisearchoptions.lfm
@@ -6,10 +6,10 @@ object WikiSearchOptsWnd: TWikiSearchOptsWnd
   Caption = 'WikiSearchOptsWnd'
   ClientHeight = 300
   ClientWidth = 449
+  Position = poScreenCenter
+  LCLVersion = '4.99.0.0'
   OnClose = FormClose
   OnCreate = FormCreate
-  Position = poScreenCenter
-  LCLVersion = '0.9.31'
   object LanguagesGroupBox: TGroupBox
     Left = 0
     Height = 300
@@ -17,23 +17,23 @@ object WikiSearchOptsWnd: TWikiSearchOptsWnd
     Width = 218
     Align = alClient
     Caption = 'LanguagesGroupBox'
-    ClientHeight = 284
+    ClientHeight = 280
     ClientWidth = 214
     TabOrder = 0
     object LanguagesTreeView: TTreeView
       Left = 0
-      Height = 284
+      Height = 280
       Top = 0
       Width = 214
       Align = alClient
-      DefaultItemHeight = 16
+      HideSelection = False
       ReadOnly = True
       ShowLines = False
       ShowRoot = False
       StateImages = ImageList1
       TabOrder = 0
+      Options = [tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoReadOnly, tvoShowButtons, tvoToolTips, tvoThemedDraw]
       OnMouseDown = LanguagesTreeViewMouseDown
-      Options = [tvoAutoItemHeight, tvoHideSelection, tvoKeepCollapsedNodes, tvoReadOnly, tvoShowButtons, tvoToolTips, tvoThemedDraw]
     end
   end
   object LanguagesSplitter: TSplitter
@@ -51,12 +51,12 @@ object WikiSearchOptsWnd: TWikiSearchOptsWnd
     Width = 226
     Align = alRight
     Caption = 'ScoresGroupBox'
-    ClientHeight = 284
+    ClientHeight = 280
     ClientWidth = 222
     TabOrder = 2
     object ScoresStringGrid: TStringGrid
       Left = 0
-      Height = 284
+      Height = 280
       Top = 0
       Width = 222
       Align = alClient
@@ -70,91 +70,41 @@ object WikiSearchOptsWnd: TWikiSearchOptsWnd
           ReadOnly = True
           SizePriority = 2
           Title.Caption = 'Item'
-          Width = 110
+          Width = 109
         end      
         item
           Title.Caption = 'Score'
-          Width = 110
+          Width = 109
         end>
       FixedCols = 0
       Options = [goFixedVertLine, goFixedHorzLine, goVertLine, goHorzLine, goRangeSelect, goColSizing, goEditing, goAlwaysShowEditor, goColSpanning, goDblClickAutoSize, goSmoothScroll]
       TabOrder = 0
       OnEditingDone = ScoresStringGridEditingDone
       ColWidths = (
-        110
-        110
+        109
+        109
       )
     end
   end
   object ImageList1: TImageList
-    left = 70
-    top = 106
+    Left = 70
+    Top = 106
     Bitmap = {
-      4C69020000001000000010000000FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00806D5EFF7C614CFF8062
-      49FF816249FF816249FF826449FF816348FF836248FF836248FF84624AFF7E61
-      4CFF806D5EFFFFFFFF00FFFFFF00FFFFFF00FFFFFF007C614CFFEED4BCFFEDD2
-      B8FFEFD2B7FFEDCFB4FFEFCFB2FFEECEB1FFF1CFB2FFF0CEB1FFEFCCB2FFEBCC
-      B3FF7E614CFFFFFFFF00FFFFFF00FFFFFF00FFFFFF007C614CFFE6CCB4FFD1B6
-      9CFFD2B59AFFD1B398FFD2B295FFCBAB8EFFCBA98CFFC8A689FFC6A389FFDCBD
-      A4FF7E614CFFFFFFFF00FFFFFF00FFFFFF00FFFFFF00806D5EFF7C614CFF8062
-      49FF816249FF816249FF816249FF816249FF836248FF816348FF816249FF7C61
-      4CFF806D5EFFFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FC00FFFFF700806D5EFF7C614CFF7C614CFF806D5EFFFFFFF700FFFFFC00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FB00FFFFF2007C614CFFE8CDB8FFE8CDB8FF7C614CFFFFFFF200FFFFFA00FFFF
-      FF00FFFFFE00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFC00FFFFFB00FFFF
-      F500FFFFED00836248FFEACEB6FFEACEB6FF836248FFFFFFEB00FFFFF500FFFF
-      F900FFFFFC00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFF700FFFFF200FFFF
-      EB00FFFFE6008A6245FFECCEB5FFECCEB5FF8A6245FFFFFFE600FFFFEB00FFFF
-      F100FFFFF700FFFFFF00FFFFFF00FFFFFF00FFFFFF00806D5EFF7A624CFF8362
-      48FF8A6343FF8A6343FFEDCFB4FFEDCFB4FF8C6343FF8C6342FF856346FF7F63
-      4BFF816F5EFFFFFFFF00FFFFFF00FFFFFF00FFFFFF007C614CFFEED4BCFFEFD2
-      B7FFF2D2B5FFF1CFB2FFEDCFB2FFEFCFB2FFF5CFB1FFF4CEB0FFEFCDB0FFEBCD
-      B2FF7F634BFFFFFFFF00FFFFFF00FFFFFF00FFFFFF007C614CFFE6CCB4FFD3B5
-      9CFFD4B497FFD5B395FFD4B294FFCFAC8BFFCFA989FFCCA688FFC6A487FFDCBE
-      A3FF7E614CFFFFFFFF00FFFFFF00FFFFFF00FFFFFF00806D5EFF7C614DFF8362
-      48FF8A6343FF8E6342FFD2AC8AFFD4AB8AFF906341FF8E6342FF876246FF7E62
-      4AFF826D5EFFFFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFF800FFFFF200FFFF
-      ED00FFFFE6008E6342FFF6D0AEFFD2AC8AFF8E6342FFFFFFE600FFFFED00FFFF
-      F200FFFFF700FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFC00FFFFFB00FFFF
-      F500FFFFED00856346FFEFCFB2FFCBAB8EFF856346FFFFFFEB00FFFFF500FFFF
-      FB00FFFFFC00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FB00FFFFF2007C614CFFECCEB5FFECCEB5FF7C614CFFFFFFF200FFFFFB00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FC00FFFFF700806D5EFF7B604BFF7D624DFF806D5EFFFFFFF700FFFFFC00FDFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFFFF00FFFF
-      FF00FFFFFF00FFFFFF00FFFFFF00
+      4C7A020000001000000010000000B20100000000000078DAED94CF2F034114C7
+      FBAF211AB4FD17845D5771A77EB4085D4DE34088F4D6A649A311B62D0E388AA4
+      EDAEAE75731651ABDAA845F1356F76AB4157E3C4A1874FE6EDCC7B336FDF7CDF
+      0070A1C39F33333A08FFB01733423F0236C111368A7D98152CE684014C910FF3
+      FD1A4FB1B7FA010C6D1F656D0F869A41599571ABECA0C2C63B3696F3324AF934
+      DFA355FC653E83E26E145A7603C5F43A347915B9CD0872C9304E12211CC742B8
+      388CB78C6F957F03CA9DFE836CBF43FE1D3A58BC30CC0F3D35F562DA6BEDE2EB
+      8C2AD7F355619FE3E77AADB2F967DBE7CDE15C8AAD310C1769F65AD9E5900D94
+      ECB527873C4C977506F95DBA24A117374A964336CD596B15DBF77BFF8C0B5E7E
+      9624F670A8878930B3C36237E64537A6450F0263CEFD4FBD5FD5B2BCE70D06BD
+      01357507F7CA36CA856D940A32DFC3A9FFCFB251E899359CA757A1CB2B50534B
+      509321E4138B388E2FE0E228F643FFFB3EF28FB07CB594047D53C2B2D8C5BF17
+      0437A6D81B166CD9FF8F76FD0C5E3FF27F38DDE27B906DD5CFB07DCCB6F747B5
+      A27FA7F78BECE6FDD5DBE8A8A99FC6FD35F553FF957E27863C98147C9FF4FBFA
+      CFFAED1D276DCF97
     }
   end
 end
