--- a/examples/imagelist_highdpi_designtime/unit1.lfm
+++ b/examples/imagelist_highdpi_designtime/unit1.lfm
@@ -7,7 +7,7 @@ object Form1: TForm1
   ClientHeight = 384
   ClientWidth = 958
   Menu = MainMenu1
-  LCLVersion = '1.9.0.0'
+  LCLVersion = '4.99.0.0'
   object ToolBar1: TToolBar
     Left = 0
     Height = 34
@@ -37,10 +37,12 @@ object Form1: TForm1
     Height = 245
     Top = 40
     Width = 302
+    HideSelection = False
     Images = ImageList1
     ImagesWidth = 32
     StateImages = ImageList1
     TabOrder = 1
+    Options = [tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips, tvoThemedDraw]
     Items.Data = {
       F9FFFFFF020004000000000000000000000000000000FFFFFFFF000000000000
       000000050000004974656D30010000000100000001000000FFFFFFFF01000000
@@ -103,16 +105,16 @@ object Form1: TForm1
     ChildSizing.ShrinkVertical = crsScaleChilds
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
     ChildSizing.ControlsPerLine = 2
-    ClientHeight = 25
-    ClientWidth = 296
+    ClientHeight = 27
+    ClientWidth = 300
     Columns = 2
     ItemIndex = 0
     Items.Strings = (
       'vsIcon'
       'vsSmallIcon'
     )
-    OnClick = RadioGroup1Click
     TabOrder = 4
+    OnClick = RadioGroup1Click
   end
   object BitBtn1: TBitBtn
     Left = 16
@@ -136,170 +138,95 @@ object Form1: TForm1
   object ImageList1: TImageList
     Scaled = True
     OnGetWidthForPPI = ImageList1GetWidthForPPI
-    left = 680
-    top = 296
+    Left = 680
+    Top = 296
     Bitmap = {
-      4C69050000001000000010000000000000000000000078483671784836FE7848
-      36FD784836FD784836FD784836FC784836FC794937E55EACB1084FE9FC2F53E9
-      FC6551E9FC504FE9FC174FE9FC0200000000999999AC818181FF5E5D5CFF7848
-      36FFD4C1B3FFD4C1B3FFD4C2B3FFD4C1B3FF784836FF5A7375FF6BCAD6FFA4EA
-      F3FFC3F0F5FF80DDE9C353E9FC2700000000818181FFFFFFFFFFBABABAFF7848
-      36FFBA9B85FFAC876AFFAC876AFFBB9D85FF7A4A38FF96C4CAFFA4F2FDFFF3FD
-      FEFFFBFEFEFFC6F1F5FF56E9FC7900000000818181FFFFFFFFFFACACACFF6E43
-      32FFA98A72FF987153FF987153FFAA8B72FF704534FF92B7BCFFA0F0F9FFEAFA
-      FDFFF5FDFEFFA9E7EFFF57EAFC6B00000000818181FFFFFFFFFFA9A9A9FF663E
-      2FFFA0836CFF8C684CFF8C684DFFA1836DFF673F30FF8B8F8FFFA1D5DCFFA8F0
-      FAFFAFF3FDFF70C8D3FF52E9FC3800000000818181FFFFFFFFFFA9A9A9FF6C41
-      30FFA68770FF936E51FF936D50FFA68770FF6C4131FFA9A9A8FFEAEDEEFFD5EE
-      F1FFC9F8FEFF75989CFF4FE9FC0800000000818181FFFFFFFFFFAAAAAAFF7546
-      34FFB08F75FF9F7657FF9E7657FFAF8F75FF754635FF8E8D8DFFC7C7C7FFEFEF
-      F0FFFBFEFEFF808282FF0000000000000000818181FFFFFFFFFFAAAAAAFF7848
-      36FFB39177FFA47A5AFFA47A5AFFB49278FF794937FFAAA9A9FFEEEEEEFFF0F0
-      F0FFFFFFFFFF818181FF0000000000000000818181FFFFFFFFFFB0B0B0FF7848
-      36FFB39177FFB08C70FFAF8A6EFFB49278FF794937FFADB2B1FFEEEEEEFFF0F0
-      F0FFFFFFFFFF818181FF0000000000000000818181FFFFFFFFFFBABABAFF7848
-      36FFB39076FF784836FF784836FFB39177FF794937FFBCBCBCFFEFEFEFFFF0F0
-      F0FFFFFFFFFF818181FF0000000000000000818181FFFFFFFFFFC1C1C1FF7848
-      36FF784836FF866254FF886658FF784836FF784836FFA4A4A4FFC8C8C8FFF0F0
-      F0FFFFFFFFFF818181FF0000000000000000818181FFFFFFFFFFC9C9C9FF7848
-      36FFB39D95FFEDEDEDFFEFEFEFFFB7A39BFF784836FFCECECEFFF1F1F1FFF1F1
-      F1FFFFFFFFFF818181FF0000000000000000818181FFFFFFFFFFDDDDDDFFC4C4
-      C4FFC7C7C7FFC7C7C7FFC8C8C8FFC8C8C8FFC6C6C6FFDFDFDFFFF1F1F1FFF2F2
-      F2FFFFFFFFFF818181FF0000000000000000818181FFFFFFFFFFEDEDEDFFEDED
-      EDFFEEEEEEFFEFEFEFFFEFEFEFFFF0F0F0FFF0F0F0FFF1F1F1FFF2F2F2FFF2F2
-      F2FFFFFFFFFF818181FF0000000000000000818181FFFFFFFFFFFFFFFFFFFFFF
-      FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
-      FFFFFFFFFFFF818181FF0000000000000000959595B4818181FF818181FF8181
-      81FF818181FF818181FF818181FF818181FF818181FF818181FF818181FF8181
-      81FF818181FF959595A8000000004FE9FC05899C8C9883A59AFF899C8CFF9C84
-      68FFA37A5BFFA47A5AFFA47A5AFFA47A5AFFA47A5AFFA47A5AFFA47A5AFFA47A
-      5AFFA47A5A8100000000000000008C99879674C9CFFFADF1F9FFC9F5F9FFA2E2
-      E4FFC8CDBFFFD5BDA6FFD7BDA5FFD8BFA7FFD8BFA7FFD8BFA8FFD8BFA8FFD2B7
-      9DFF869E8FFF00D4EDFF4FE9FC768A9B8BFF9FECF5FFF2FCFDFFFAFDFDFFCCF6
-      FAFF9AD3D0FFBCA8A0FFB089A7FFA980ACFFAC85AAFFC09D9EFFCFB195FFDAC3
-      ACFF869E8FFF4FE9FCFF00D4EDFF8F9683FF9FECF3FFEAFAFDFFF4FCFDFFB5F1
-      F7FF9CCACBFFA689AEFFC4A39BFFCEAF95FFC7A799FFAE87A8FFC3A29BFFDAC3
-      ACFF80A599FF4FE9FCFF00D4EDFFA17D5FFFB3DFDEFFA7ECF3FFA8E9F0FF92E6
-      ECFFA0A5BCFFC09F9DFFBF9D9EFFAA82ABFFAB83AAFFC7A799FFB18AA7FFDAC3
-      ACFF7BABA2FF4FE9FCFF00D4EDFFA47A5AFFE7DED1FFCFDDD6FFA8C7C2FFC7DD
-      D6FFA785AEFFCCAE96FFAC84AAFFC09E9DFFAD86A9FFCDAF95FFA980ACFFDAC3
-      ACFF738369FF29B09DFF0A7E72FFA47A5AFFF0E3D7FFE8DBCEFFCDB8AAFFE8DA
-      CCFFA980ACFFCDAF95FFA980ACFFC3A19CFFAE87A9FFC3A29CFFAF89A8FFDAC3
-      ACFF738369FF29B09DFF0A7E72FFA47A5AFFF1E4D8FFE8DBCEFFD0B9A9FFEADA
-      CCFFB18BACFFC5A49AFFB691A4FFB089A8FFB38DA5FFAC84AAFFC6A69AFFDAC3
-      ACFF7F8367FF29B09DFF0A7E72FFA47A5AFFF1E4D8FFE8DBCEFFD1B9A9FFEADA
-      CCFFC9ACAAFFAE87A8FFC7A799FFCEB095FFCFB195FFCFB195FFCFB195FFDAC3
-      ACFF84636FFF2929EFFF0000CCFFA47A5AFFF0E4D7FFE8DACEFFE0CCBFFFEADA
-      CCFFD9C1A9FFC5A59AFFB18BA7FFA880ACFFAD86A9FFCFB195FFCFB195FFDAC3
-      ACFF84636FFF2929EFFF0000CCFFA47A5AFFF0E3D7FFECDFD3FFECDCCFFFE8D7
-      C7FFE4D2C0FFE0CAB7FFE0CBB7FFE0CBB7FFE0CBB8FFE0CBB8FFE0CBB8FFE0CB
-      B9FF84636FFF2929EFFF0000CCFFA47A5AFFE7D8CBFFAB8C7EFFAA8E82FFA98D
-      80FFA88C7EFFA7887AFFA88A7BFFAB8F81FFAC9082FFAC9083FFAA8D80FF9672
-      61FD775978FF0000CCFF0000CC56A47A5AFFC3AB9FFFB6B5B5FFB7B7B7FFB7B7
-      B7FFB7B7B7FFB7B7B7FFB7B7B7FFB7B7B7FFB7B7B7FFB9B9B9FFC9BAAFFFA47A
-      5AFFA47A5AFF0000000000000000A47A5AFFB89F8FFFC3C1C1FFDDDDDDFFDDDD
-      DDFFDDDDDDFFDDDDDDFFDDDDDDFFDEDEDEFFDEDEDEFFDEDEDEFFC4B9B4FFA47A
-      5AFFA47A5AFF0000000000000000A47A5A81A47A5AFFAE968BFDBDADA7FFC2B5
-      AFFFBEB0ABFFBEB0ABFFBEB1ABFFBEB1ABFFBEB1ACFFBEB1ACFFBCAEA8FFB8AC
-      A9FEA47A5AFF000000000000000000000000A47A5A81A47A5AFFA47A5AFFA47A
-      5AFFA47A5AFFA47A5AFFA47A5AFFA47A5AFFA47A5AFFA47A5AFFA47A5AFFA47A
-      5AFFA47A5AFF0000000000000000000000000000000000000000000000007B50
-      75617B5274CC7C5275F77B5075FE7D5376FA7E5575E079536F8A000000000000
-      000000000000000000000000000000000000000000007B50752E7B5074D1AC8E
-      AAFFD5C1D6FFE0CDE1FFE0CEE2FFE0CDE1FFD4BFD4FFAA8DA6FF815C75E739C5
-      D17020F4FF781FF6FF5900FFFF02000000007B50752E7B5074F1D0B9D0FFCEBC
-      C7FFCAC6C8FF58C0D7FF58C0D7FF58C0D7FFE1E0E2FFD1C6CFFF91AFBBFF32DD
-      E6FC54F3FBEE1FF5FEDE20F5FF57000000007A5074CBD0B9D0FFC1B1B6FFD7E4
-      E7FF58C0D7FF58C0D7FF58C0D7FF58C0D7FFEEF0F0FFEAECECFF7FE7EEFF67EE
-      F5FFE6FAFBFF72F7FEED20F5FF897B507561AC8EAAFFCCB8C4FFD6D5D5FF0000
-      00FF58C0D7FF58C0D7FF58C0D7FF58C0D7FFF0F2F2FFEBEDEDFF91EEF2FF4CEE
-      F7FF85EEF4FF44EBF3F51FF5FF4A7B5075B6D5C1D6FFB9AFB0FFEEF0F0FFE4EF
-      F1FF000000FF5DADBFFF58C0D7FF58C0D7FFF0F2F2FFECEEEEFFD9EAEBFF9EEF
-      F3FF7FCFDBFF698497EF21F1FF027A5074EDE0CDE1FFC2BDBDFFECEEEEFFF1F3
-      F3FFF3F6F7FF000000FF266C7BFF5E7A81FFDEDFDFFFEBEDEDFFEBECECFFF5F5
-      F5FFDECBDEFF7C5274FE7357600A7A5074FDE0CEE2FFD3D3D3FFDBDFDDFFEFF1
-      F1FFF2F4F4FFF3F5F5FF000000FF888C8DFFA3A4A4FFE9EBEBFFE9EBEBFFF8F9
-      F8FFE0CEE2FF7B5074FF7357602E7A5074EDE0CDE1FFCDC9CAFFF3F4F4FFEBED
-      EDFFEDEFEFFFE0E2E2FF2A2A2AFF000000FFD9DBDBFFE6E8E8FFE8EAEAFFF6F7
-      F7FFE0CDE1FF7B5274FE7357600B7B5075B6D5C1D6FFB5ABADFFF1F2F2FFE7E9
-      E9FFE9EBEBFF545454FF000000FFE8EAEAFFE6E8E8FFE3E5E5FFF6F7F7FFEDED
-      EEFFD5C1D6FF7E5774F4000000007B507561AC8EAAFFC2AEBBFFE7E6E7FFEDEE
-      EEFFA9ABABFF000000FFE5E7E7FFE4E6E6FFE2E4E4FFEFF0F0FFF6F6F6FFDACD
-      DAFFAC8EAAFF7B576DC600000000000000007A5074CCD0B9D0FFB3A2ABFFECED
-      EDFFF2F3F3FFE7E8E8FFDEE0DFFFE3E5E5FFE9EBEBFFF3F4F4FFE4E0E5FFD0B9
-      D0FF7C5473F9251C1F1C0000000000000000613F5C3A794F73F4D0B9D0FFC1AF
-      BCFFC8C2C5FFF3F4F4FFF0F1F1FFF2F3F3FFF4F4F5FFDDD3DDFFD0B9D0FF7B51
-      74FE4E3746920000002B00000002000000000000000C422B3F55734B6CE1AC8E
-      AAFFD5C1D6FFE0CDE1FFE0CEE2FFE0CDE1FFD5C1D6FFAC8EAAFF785170FA3C29
-      36990000004B0000002300000000000000000000000000000010000000325235
-      4E916F4968E2794F72FB7B5074FF7A5073FD704B69F0583C51C6000000620000
-      00490000001E0000000100000000000000000000000000000000000000000000
-      000C0000001C0000002C0000003C0000003B0000003200000024000000110000
-      0002000000000000000000000000000000000000000000000000000000000000
-      000000000000000000000000000000000000000000004FE9FC0157EAFC1575ED
-      FC5C9EF2FD838CF0FD317BEEFC04000000000000000000000000000000000000
-      000000000000000000000000000000000000000000004FE9FC1272ECFC8EC7F7
-      FDF0EBFCFEFABCF6FDCC6CECFC399BA29FAE858A88FF858A88FF858A88FF858A
-      88FF858A88FF858A88FF858A88FF858A88FF858A88FF78A0A3FF95E2ECFFF2FC
-      FDFFFDFEFEFFDEF7FBFF7CE6F3A9858A88FFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
-      FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFD4F9FEFF8EF0FCFFD3F9
-      FEFFEDFCFEFFB6F4FDFF92CFD4FF858A88FFFFFFFFFFFFFFFFFFDAE7F7FF3170
-      B1FF03529FFF306FB0FFDAE7F7FFFFFFFFFFFEFEFEFFF5FBFCFFBFF4FBFF98F1
-      FBFFA0F1FCFF9EEFFAFF7E9697FF858A88FFFFFFFFFFFFFFFFFF3170B1FF40A7
-      E3FF4CBBE5FF40A7E3FF296AABFFFDFDFDFFD5D5D5FFD9D9D9FFB1B5B5FFBDD6
-      D9FFCDEEF2FFE2F4F6FF848B89FF858A88FFFFFFFFFFFFFFFFFF0453A0FF4BB9
-      E5FF47A6E5FF49AFE5FF02519EFFFBFBFBFFC1C1C1FF999999FFA3A3A3FFB3B3
-      B3FFD3D3D3FFF5F5F5FF858A88FF858A88FFFFFFFFFFFFFFFFFF2E6FAEFF40A7
-      E3FF49AFE5FF40A7E3FF1D61A2FFF9F9F9FFF7F7F7FFF6F6F6FFF5F5F5FFF3F3
-      F3FFF2F2F2FFFDFDFDFF858A88FF858A88FFFFFFFFFF78ADA8FF336774FF0556
-      93FF014F9CFF04508EFF2C636FFF70A6A1FFF4F4F4FFD2D2D2FFD1D1D1FFD1D1
-      D1FFCFCFCFFFFAFAFAFF858A88FF858A88FFFFFFFFFF136D67FF1D8F82FF1A8E
-      82FF148578FF117E74FF0E786DFF0E6963FFF3F3F3FFF0F0F0FFF0F0F0FFF0F0
-      F0FFEFEFEFFFFDFDFDFF858A88FF858A88FFFFFFFFFF74A9A4FF0F6C65FF0766
-      5EFF07665EFF07665EFF06635CFF59928DFFF1F1F1FFDEDEDEFFD8D8D8FFD7D7
-      D7FFD7D7D7FFFBFBFBFF858A88FF858A88FFFFFFFFFFF1F1F1FFEFF0F0FFDBE5
-      E4FFDBE5E4FFDBE5E4FFEEEFEFFFF1F1F1FFF0F0F0FFEEEEEEFFEDEDEDFFECEC
-      ECFFEAEAEAFFFCFCFCFF858A88FF858A88FFFFFFFFFFEFEFEFFFF2F2F2FFF2F2
-      F2FFF2F2F2FFF2F2F2FFF2F2F2FFF2F2F2FFF0F0F0FFF0F0F0FFF0F0F0FFF0F0
-      F0FFF0F0F0FFFDFDFDFF858A88FF858A88FFFFFFFFFFFBFBFBFFFBFBFBFFFBFB
-      FBFFFBFBFBFFFBFBFBFFFBFBFBFFFBFBFBFFFBFBFBFFFBFBFBFFFBFBFBFFFBFB
-      FBFFFBFBFBFFFBFBFBFF858A88FF9BA29FAE858A88FF858A88FF858A88FF858A
-      88FF858A88FF858A88FF858A88FF858A88FF858A88FF858A88FF858A88FF858A
-      88FF858A88FF858A88FF989D9B97000000000000000000000000000000000000
-      0000000000000000000000000000000000000000000000000000000000000000
-      00000000000000000000000000005B5B5B005B5B5B005B5B5B005B5B5B005458
-      56F8555957FB545856FC555957FC555957FC575B59FD585C5AFD5D615FD65555
-      55155B5B5B005B5B5B005B5B5B007A7A7A9F797979EC797979EC797979EC5458
-      56FFF7F7F7FFF9F9F9FFFAFAFAFFFBFBFBFFFBFBFBFFFCFCFCFFA2A3A2FF585C
-      5BE15B5B5B0E5B5B5B005B5B5B00787878F0C9C9C9FFC7C7C7FFC4C4C4FF5357
-      55FFDADADAFFD3D3D3FFD3D3D3FFD2D2D2FFCFCFCFFFCDCDCDFFFEFEFEFF9293
-      93FE5A5E5BD4555555095B5B5B00737373EFC5C5C5FFB0B0B0FFACACACFF5357
-      55FFDCDCDCFF9C9D9CFF9C9D9CFF9C9D9CFF9C9D9CFFD4D5D5FFFEFEFEFFFDFD
-      FDFF969796FE595D5B9A5B5B5B006E6E6EEEC0C1C1FFACACACFFAAAAAAFF5458
-      56FFE2E2E2FFDFDFDFFFDEDEDEFFDEDEDEFFDDDDDDFFE0E0E0FFE9E9E9FFE5E5
-      E5FFD0D0D0FF5B5F5DF15B5B5B006A6A6AECBDBDBDFFA9A9A9FFA5A5A5FF5458
-      56FFE6E6E6FF9EA09FFF9B9D9CFF9B9D9CFF9B9D9CFFDDDDDDFFE3E3E3FFE3E3
-      E3FFD0D1D0FF595D5BF35B5B5B00656565EBB7B7B7FFA6A6A6FFA1A1A1FF5559
-      57FFEBEBEBFFEAEAEAFFEAEAEAFFE9E9E9FFE9E9E9FFE8E8E8FFE8E8E8FFE7E7
-      E7FFD9D9D9FF595C5BF15B5B5B005F5F5FE9B3B3B3FFA56C40FFA56838FFA568
-      38FFA56837FFA56636FFA56636FFA56635FFA46635FFA46635FFA46635FFA465
-      34FFA46534FFA46534FFA66737E45B5B5BE9AEAEAEFFA56635FFEAD5C0FFEAD5
-      C0FFEAD5C0FFEAD5C0FFEAD5C0FFEAD5C0FFEAD5C1FFEAD6C1FFEAD6C1FFEAD6
-      C1FFEAD6C1FFE8D2BBFFA56534FE565656E7A9A9A9FFA46635FFEAD6C3FFDBB5
-      92FFDBB592FFDBB592FFDBB592FFDBB592FFDBB592FFDBB592FFDBB592FFDBB5
-      92FFDCB895FFE7D0B9FFA46634FD515151E5A4A5A5FFA46636FFEBD7C5FFDDB9
-      98FFDDB998FFDDB998FFDDB998FFDDB998FFDDB998FFDDB998FFDDB998FFDDB9
-      98FFDCB795FFE7CEB8FFA56635FB4C4C4CE4A1A1A1FFA56737FFE9D2BFFFDDBA
-      9BFFDDBA9AFFDDBA9AFFDDBA9AFFDDBA9AFFDDBA9AFFDDBA9AFFDCB796FFDAB2
-      8FFFD8B08BFFE4C9B1FFA56635FA484848E29B9B9BFFA56838FFE1C1A5FFD9B2
-      8EFFD8AF8AFFD7AC85FFD6AA83FFD5A981FFD4A77EFFD3A379FFD2A277FFD2A2
-      77FFD3A57BFFDBB695FFA66735F8494949E0999999FFA56839FFDBB594FFD5AA
-      82FFD4A67DFFD4A67DFFD4A67DFFD4A67DFFD4A67DFFD4A67DFFD4A67DFFD4A6
-      7DFFD4A87FFFD5AB85FFA56636F7484848E096887EFFA56839FFBF8855FFC089
-      56FFC08956FFC08956FFC08956FFC08956FFC08956FFC08956FFC08956FFC089
-      56FFC08956FFB77E4BFFA66736D9514A4500A46534FFA46534FFA46534FFA465
-      34FFA46534FFA46534FFA46534FFA46534FFA46534FFA46534FFA46534FFA465
-      34FFA46534FFA46535EEA5653247
+      4C7A050000001000000010000000910A00000000000078DAA5970950D4D71DC7
+      894DDA34CDA44DDB4C673A494DA7D7986472588FA4CD3449DB245E8DA20222A8
+      3519BC824A380C874111890A2A110B1EDCC7C2EEB2728428A258440444B9EF9B
+      15816539965D960581DDFDF6F77BBACC423CA76FE63BEFFFDF7D9FF7FBBDDFFB
+      BDE36F6373A7782F5AF005C94C3259C9C8F259BCB07BBD22F3E9E56AE31BABD4
+      46175BB571053DFF8A348BD953A74E29020202B07E9D33A83D6AF3B3EEE8CA9D
+      9A7F5BEBE185CFAFD723A94F8F02AD017BDBD405D4D79F986796CB850B1744DB
+      0B9141501CD82674313A08BE4BDE46C4D5EB481A36416F3263D26C4691CE007B
+      B5D1C79A572814D8F18FB99005BBE3E417AB84E421EE70FB701EC2B27311A71D
+      47DF840906EA43A61A82439FF1736B5E269361D3DFDE405CA02B0E6F5946FA17
+      E203B763F37B6F22243414F175AD906A2790AE37C1ED5A0D56AA8D6FCFE45D3F
+      7813C907DC707C872D8E6F5F219E5D3F788BFE93A26F50833A8D0E25B7CDF03A
+      19058ADFD3D6BC5C2E87D747F39011EA85D85D0E8821A5D3B3D747F371F4C811
+      1417176368482BC6BF77DF3EDC9DBA693CC72FEBD89748F25D2BF45D983768FE
+      2027DF341A0DB45AAD68CBCC4C3E2323638ACF38EC86F4E01D53FC996F331FCA
+      5BE62FEB9B5DA2B6F4C57C6E6E2EF93EF4403E3F3F7F8AFBFAD3D538B869CDD4
+      7B525212AE5DBBF640BEA4A4E48ECDE8700C0E0E0A7BD98991E2B7F2F272E874
+      3AA1FBF16D6D6DB87AF5AA88338BEDB18A8A8AD0D1D121D8E1E1E1FBF26C93C5
+      7162DB96F1B22CEC83F8C729D67C7878F877FCFE382246CA2CE5E05387A20E9F
+      0C949C06D588DABF0589BE4E53F9731F05586C1F3E7520C2B3A4026774E32831
+      8C23A1B30BD7CAF2507729190D972468CC4BB92BA950757634BE8E09854DED20
+      E7FFAEE0C810C40E18306C3461C26442E9E8044ED75422571A878C432990ED55
+      401124C7E5E818546486A3B940217862451FA11181C4EBC5BA1EA13ECEEAC610
+      75FD06920FA5E12ACD7D797A388A534E21ED801405099182DF2B3935C5C77FB5
+      01591DED48A13EA46A2DC27A061027C9C5E5D868E4914DF9BE54A406CA451F99
+      C12982F74B4D98E2391EAAF62A54B4D5435A7C05C554A704A5A1342D028AFDE4
+      774C34CE7C2D4319F9C16361DE23702BE66444E3197F77C16B6F35A0B7A51C65
+      E7E5E86D2E15ED2CED0BE2A3C87719F91E85F443D27BF2BAAE46C157E6C8D047
+      7C6688028549A771EE5812C5508AAC2312E14B51F269C1EF09DC7C4FBEEA2E5F
+      A2908B78F198CB33C245DC2D627EFF673B3167CE10E55FE91DFFBBC8FFE67228
+      4BF304DF942F4321E55366480AA434061EFF03791AFF40470D065A2BD0DB508C
+      AEEACB505ECF86F28645E7AD94F33D5ED57803A987FD213FBA0FB2237B21A5E7
+      9483BE9006FB213534008A6FF6910221A7FF22DC379ABE74F4162CC99EF982D4
+      589C3B7B16D9D9D9F7554E4E0E4A2EA44FAD014BFEF3F3F9D85014D0DEC5FBC7
+      4CB5B7B74FE96ACE77F7E203F83D2D22C474E94C0AAE9C4DC77F3352EF28D322
+      85506E9A14E71532B3356FDDC7E3C8E63EC56F85D746BF959EA5BB577A8DD1B3
+      F9AB55BB26FCEDBC943EAB7606DB3CA050DBD7FD567856298ECA51975F0F65D9
+      4D28CB3B455D9B574BB14F4680B397EA9DC22AB79747E03D7B148E36C02C2B56
+      57995389F2DC625C2FBA8635971BA67453D989AAA20A1C4BBF88B96D3DC6D5FA
+      49CD6C83B9FD65031C98F75DE17983D9FCCC7368E8524D63591ADA7FFB0606B0
+      47A5C1668D013D1393701F330F127F88C7CB3E979EBF8AFABA3A8ECBF7782DED
+      D9FDB4AF1FD30C6399660C419A11FCB35F6F986DC012E2CFF17873D233849DAE
+      219DE863DD99BC69FC009D094D7DFD8819D2634F450BB6EE3F31F45B1D6691EF
+      831CA32B972E89363ABD1EFAD131D1C71F5DFDB0DE3700ED74F6B0FD7E1A83C1
+      6040FB8D76EC5EE969F670F8F733C49B38CE35353568E968C3109F332323D053
+      3BEEE3E0E12348A4B353DDDF2F747BFCB698178A37887FDD62BFACE43AF4C4B1
+      9D413AB7949D9D78E59557441F4D2D2DE8E9ED456F5F1F46C7C6C49CFADDB1FF
+      13CBF8CFA69E818EC6A952AB859DD5AB570B9619666F75770B7690EF40D4DEDF
+      C173C4926F1CFF2B6917A1EA51619062204B4D156CB74A85AE9E1E7476756188
+      623B3A3A8AE6B266707B3F87ED4596DCA33194F2FC6725A46280FC1FA618AAC8
+      66BBB243D8657F786C5DCA6E70BBDDAB3DC6FFF0E2EC172DFCC6F79CFFE2B3DC
+      6344E4507A2EAE5D2914EDB51C4BEA6B64C480B69A36C1FAD97A9A3F59F85118
+      61AF9266DDEDE2D9BFBFFA9E9DC752D79BF7CA7F7EE7DFBD6DDD26DE9DB3E014
+      B55F4AFADD8C25F433D2DC95F33F39B673F1964E9FE5EE933C47BE2B3C4C6E4B
+      B76AD7BC6BCBE3FD94B498F41BD213F7598ACF92786CAF91DE25FD95FB25FD9E
+      F4BC95CF8F55E8BC7B82EECB2F780D1A9D63864D8187B5A6B7FC34C6271F83FF
+      B9FB80F168F19849DB6F344FE48E9A4A5D078CEF4426C4A605051FC4C3E41D97
+      88F0CE01714F30D1FDB77D6C12BB7BF432FEEF514AEDB81947B546D4503D6834
+      E3DC88096115B5B0E69B556378CB2D133F58198B37776688772E66B267983422
+      6F641227759388D319691D4FC03FE2C4349ED9F7536E61D9C56E51CFD9960A13
+      DD69EA685F696A6A42269D3197EA9B5046FB48E7C828F6871C9AC63FB92A0E4B
+      73BAF171723716A77763966D0C262727C5BD98BEB190989888ACAC2CB1D6791F
+      B0C4C6525EDF9926EC32CBF54B1B13303E3E8E315A77BC7698D1533EF31D94FD
+      B2E6BDCF48F1E7CD9E78CAFE389E581E8527571CC56B74CEBA25C753FE8FA0BA
+      BA1A5555554215151598989898C6FF62FB66BC14BA0FBFA633F89741DE78DEDF
+      13CF796FC7735B3F13362DF76016DF8B67DAF79425E1A7AE2EF8D1A6F553FAE1
+      67CE700C3B22EECE7C7E363636A2A1A14188E362CD731BDE235ABABBA6A4213B
+      FC3BDBE43B39DFCD07680FEDA33DC968344EE3D927CBFD7CA6AC7DB768A6FFEC
+      CFE38AD947CDFF7BE96474E4099BFFB33839394DD3EA35F6B7ED1C1D26A93652
+      2DE4E0E4685AE3BCD6B46EE3867A3B3BBB17ACDBFBFAFAC6FAF8F80C58449CC8
+      37CE3BCE11CB5839DE09890958E3EC7493B8E72CBCB7B7B796BFDBF87B8BBFBD
+      5639D8A1B9B959E4388BF38EF3ADACAC4CACC3B0E3C7CD6BD73BD5921F3F66DE
+      C3C363A8B0B0507CBBF2F73FF3ADADAD888A8E9AA65A5A83CCF3BC459C88303B
+      AE733ACDFC8E1D3B3497697D31CBDFCFEC7F279D7DFCBD67B9B7F13D4EA95442
+      4D675B379D2795959570DAB04EC7FCB66DDB062ED1D9CDDFFE128944F03D7466
+      C5C4C52292EC5AC47DDCBA754BA8B2AA12645FCFBC8B8B4B3FDF2F939393111F
+      1F0F8A37FAE9BCE21C65B14D562F9FBF24159D89BC97383A3B09FB1B366C50F3
+      9E20717D1F922D6FDFD54248362DB8ABF948B296CBBC29256F5ED8457DA8D3D2
+      D244BBBEBACBF7513EFAEAA7ABB7FA22242EF3CCF6F6F62A1E3BF7DD575F8096
+      B3610F55EBF970A82A73889967B2B5B5ED4EA2B82591AFFD0D8568CB39F950B5
+      66135F7E9E7D9E5CB66C5917C74DB27921D4D57968BB10493A7D4FB56647A0F9
+      DB50346684A0AB2493F989458B16754646468AB8DDCC97A0E9DBA3684C0F4683
+      2208F5F240D4C902509BE28F9A441F54277C295423F143CBB9708ADFFCDB8B17
+      2F56F2DE2CD9F20E8DED3FA893EF436DF2570F96740FEA5283787EC6C8BE32E2
+      A0BFE0F30EDAE1F221FB4752B6FF52B2BFA0C976C98736D673FAE89AAF91B8CC
+      FDF87F515E4E2E
     }
     BitmapAdv = {
       4C69030000004C7A0500000016000000160000000D1000000000000078DAED99
@@ -1357,8 +1284,8 @@ object Form1: TForm1
   end
   object MainMenu1: TMainMenu
     Images = ImageList1
-    left = 816
-    top = 296
+    Left = 816
+    Top = 296
     object MenuItem1: TMenuItem
       Caption = 'MenuItem1'
       SubMenuImages = ImageList1
