--- a/components/education/edumenu.lfm
+++ b/components/education/edumenu.lfm
@@ -1,41 +1,42 @@
-inherited EduMenuFrame: TEduMenuFrame
+object EduMenuFrame: TEduMenuFrame
+  Left = 0
   Height = 301
+  Top = 0
   Width = 437
   ClientHeight = 301
   ClientWidth = 437
-  OnClick = FrameClick
   TabOrder = 0
   DesignLeft = 437
   DesignTop = 99
-  object MenusGroupBox: TGroupBox[0]
-    Left = 143
+  object MenusGroupBox: TGroupBox
+    Left = 158
     Height = 289
     Top = 6
-    Width = 288
+    Width = 273
     Align = alClient
     BorderSpacing.Around = 6
     Caption = 'MenusGroupBox'
-    ClientHeight = 271
-    ClientWidth = 284
+    ClientHeight = 269
+    ClientWidth = 269
     TabOrder = 0
     object MenusTreeView: TTreeView
       Left = 0
-      Height = 271
+      Height = 269
       Top = 0
-      Width = 284
+      Width = 269
       Align = alClient
-      DefaultItemHeight = 15
+      HideSelection = False
       ReadOnly = True
       TabOrder = 0
+      Options = [tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoReadOnly, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips]
       OnMouseDown = MenusTreeViewMouseDown
-      Options = [tvoAutoItemHeight, tvoHideSelection, tvoKeepCollapsedNodes, tvoReadOnly, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips]
     end
   end
-  object EduMenuBtnPanel: TPanel[1]
+  object EduMenuBtnPanel: TPanel
     Left = 0
     Height = 301
     Top = 0
-    Width = 137
+    Width = 152
     Align = alLeft
     AutoSize = True
     ChildSizing.LeftRightSpacing = 6
@@ -43,29 +44,29 @@ inherited EduMenuFrame: TEduMenuFrame
     ChildSizing.HorizontalSpacing = 6
     ChildSizing.VerticalSpacing = 6
     ClientHeight = 301
-    ClientWidth = 137
+    ClientWidth = 152
     TabOrder = 1
     object ShowAllButton: TButton
       Left = 7
-      Height = 23
+      Height = 25
       Top = 7
-      Width = 123
+      Width = 138
       Align = alTop
       AutoSize = True
       Caption = 'ShowAllButton'
-      OnClick = ShowAllButtonClick
       TabOrder = 0
+      OnClick = ShowAllButtonClick
     end
     object ShowAllChildsButton: TButton
       Left = 7
-      Height = 23
-      Top = 36
-      Width = 123
+      Height = 25
+      Top = 38
+      Width = 138
       Align = alTop
       AutoSize = True
       Caption = 'ShowAllChildsButton'
-      OnClick = ShowAllChildsButtonClick
       TabOrder = 1
+      OnClick = ShowAllChildsButtonClick
     end
   end
 end
