--- a/components/education/eduoptionsdlg.lfm
+++ b/components/education/eduoptionsdlg.lfm
@@ -6,29 +6,38 @@ object EduOptionsDialog: TEduOptionsDialog
   Caption = 'EduOptionsDialog'
   ClientHeight = 382
   ClientWidth = 554
+  LCLVersion = '4.99.0.0'
   OnCreate = FormCreate
-  LCLVersion = '0.9.27'
   object ButtonPanel1: TButtonPanel
     Left = 6
-    Height = 33
-    Top = 343
+    Height = 34
+    Top = 342
     Width = 542
+    OKButton.Name = 'OKButton'
+    OKButton.DefaultCaption = True
+    HelpButton.Name = 'HelpButton'
+    HelpButton.DefaultCaption = True
+    CloseButton.Name = 'CloseButton'
+    CloseButton.DefaultCaption = True
+    CancelButton.Name = 'CancelButton'
+    CancelButton.DefaultCaption = True
     TabOrder = 0
     ShowButtons = [pbOK, pbCancel, pbHelp]
   end
   object FramesTreeView: TTreeView
     Left = 6
-    Height = 331
+    Height = 330
     Top = 6
     Width = 186
     Align = alLeft
     BorderSpacing.Around = 6
-    DefaultItemHeight = 19
+    HideSelection = False
     TabOrder = 1
+    Options = [tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips, tvoThemedDraw]
   end
   object FramePanel: TPanel
     Left = 198
-    Height = 337
+    Height = 336
     Top = 0
     Width = 356
     Align = alClient
