--- a/components/googleapis/demo/drive/frmmain.lfm
+++ b/components/googleapis/demo/drive/frmmain.lfm
@@ -6,17 +6,16 @@ object MainForm: TMainForm
   Caption = 'Google drive demo'
   ClientHeight = 396
   ClientWidth = 756
+  LCLVersion = '4.99.0.0'
   OnCreate = FormCreate
-  OnDestroy = FormDestroy
-  LCLVersion = '2.1.0.0'
   object BRefreshFolders: TButton
     Left = 72
     Height = 25
     Top = 8
     Width = 64
     Caption = 'Refresh'
-    OnClick = BRefreshFoldersClick
     TabOrder = 0
+    OnClick = BRefreshFoldersClick
   end
   object GBAccess: TGroupBox
     Left = 0
@@ -25,41 +24,41 @@ object MainForm: TMainForm
     Width = 756
     Align = alBottom
     Caption = 'Please provide Google API access code'
-    ClientHeight = 55
-    ClientWidth = 754
+    ClientHeight = 53
+    ClientWidth = 752
     TabOrder = 1
     Visible = False
     object LEAccess: TLabel
       Left = 16
-      Height = 17
+      Height = 15
       Top = 8
-      Width = 69
+      Width = 65
       Caption = 'Access code'
       ParentColor = False
     end
     object BSetAccess: TButton
-      Left = 584
+      Left = 582
       Height = 25
       Top = 1
       Width = 75
       Anchors = [akTop, akRight]
       Caption = 'OK'
-      OnClick = BSetAccessClick
       TabOrder = 0
+      OnClick = BSetAccessClick
     end
     object BCancel: TButton
-      Left = 664
+      Left = 662
       Height = 25
       Top = 0
       Width = 75
       Anchors = [akTop, akRight]
       Caption = 'Cancel'
-      OnClick = BCancelClick
       TabOrder = 1
+      OnClick = BCancelClick
     end
     object EAccessCode: TEdit
       Left = 112
-      Height = 29
+      Height = 23
       Top = 8
       Width = 400
       TabOrder = 2
@@ -73,12 +72,12 @@ object MainForm: TMainForm
     Anchors = [akTop, akRight]
     Caption = 'Refresh'
     Enabled = False
-    OnClick = BRefreshFilesClick
     TabOrder = 2
+    OnClick = BRefreshFilesClick
   end
   object LTasks: TLabel
     Left = 392
-    Height = 17
+    Height = 15
     Top = 16
     Width = 215
     Anchors = [akTop, akLeft, akRight]
@@ -87,9 +86,9 @@ object MainForm: TMainForm
   end
   object Label1: TLabel
     Left = 22
-    Height = 17
+    Height = 15
     Top = 16
-    Width = 41
+    Width = 38
     Caption = 'Folders'
     ParentColor = False
   end
@@ -99,10 +98,11 @@ object MainForm: TMainForm
     Top = 35
     Width = 344
     Anchors = [akTop, akLeft, akBottom]
+    HideSelection = False
     ReadOnly = True
     TabOrder = 3
+    Options = [tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoReadOnly, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips, tvoThemedDraw]
     OnSelectionChanged = TVFoldersSelectionChanged
-    Options = [tvoAutoItemHeight, tvoHideSelection, tvoKeepCollapsedNodes, tvoReadOnly, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips, tvoThemedDraw]
   end
   object LVFiles: TListView
     Left = 384
@@ -142,12 +142,13 @@ object MainForm: TMainForm
         Caption = 'Mime Type'
         Width = 200
       end>
+    HideSelection = False
     TabOrder = 4
     ViewStyle = vsReport
     OnDblClick = LVFilesDblClick
   end
   object SDDownload: TSaveDialog
-    left = 415
-    top = 163
+    Left = 415
+    Top = 163
   end
 end
