--- a/components/googleapis/demo/gmail/frmmain.lfm
+++ b/components/googleapis/demo/gmail/frmmain.lfm
@@ -6,17 +6,16 @@ object MainForm: TMainForm
   Caption = 'Google mail demo'
   ClientHeight = 636
   ClientWidth = 1025
+  LCLVersion = '4.99.0.0'
   OnCreate = FormCreate
-  OnDestroy = FormDestroy
-  LCLVersion = '1.5'
   object BRefreshFolders: TButton
     Left = 104
     Height = 25
     Top = 8
     Width = 120
     Caption = 'Refresh'
-    OnClick = BRefreshFoldersClick
     TabOrder = 0
+    OnClick = BRefreshFoldersClick
   end
   object GBAccess: TGroupBox
     Left = 0
@@ -25,15 +24,15 @@ object MainForm: TMainForm
     Width = 1025
     Align = alBottom
     Caption = 'Please provide Google API access code'
-    ClientHeight = 63
+    ClientHeight = 71
     ClientWidth = 1021
     TabOrder = 1
     Visible = False
     object LEAccess: TLabel
       Left = 16
-      Height = 12
+      Height = 15
       Top = 8
-      Width = 56
+      Width = 65
       Caption = 'Access code'
       ParentColor = False
     end
@@ -44,8 +43,8 @@ object MainForm: TMainForm
       Width = 107
       Anchors = [akTop, akRight]
       Caption = 'OK'
-      OnClick = BSetAccessClick
       TabOrder = 0
+      OnClick = BSetAccessClick
     end
     object BCancel: TButton
       Left = 904
@@ -54,12 +53,12 @@ object MainForm: TMainForm
       Width = 106
       Anchors = [akTop, akRight]
       Caption = 'Cancel'
-      OnClick = BCancelClick
       TabOrder = 1
+      OnClick = BCancelClick
     end
     object EAccessCode: TEdit
       Left = 144
-      Height = 18
+      Height = 23
       Top = 2
       Width = 648
       Anchors = [akTop, akLeft, akRight]
@@ -74,12 +73,12 @@ object MainForm: TMainForm
     Anchors = [akTop, akRight]
     Caption = 'Refresh'
     Enabled = False
-    OnClick = BRefreshFilesClick
     TabOrder = 2
+    OnClick = BRefreshFilesClick
   end
   object LMails: TLabel
     Left = 392
-    Height = 12
+    Height = 15
     Top = 8
     Width = 484
     Anchors = [akTop, akLeft, akRight]
@@ -88,9 +87,9 @@ object MainForm: TMainForm
   end
   object LLabels: TLabel
     Left = 24
-    Height = 12
+    Height = 15
     Top = 8
-    Width = 30
+    Width = 33
     Caption = 'Labels'
     ParentColor = False
   end
@@ -100,11 +99,11 @@ object MainForm: TMainForm
     Top = 40
     Width = 344
     Anchors = [akTop, akLeft, akBottom]
-    DefaultItemHeight = 14
+    HideSelection = False
     ReadOnly = True
     TabOrder = 3
+    Options = [tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoReadOnly, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips, tvoThemedDraw]
     OnSelectionChanged = TVLabelsSelectionChanged
-    Options = [tvoAutoItemHeight, tvoHideSelection, tvoKeepCollapsedNodes, tvoReadOnly, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips, tvoThemedDraw]
   end
   object LVMessages: TListView
     Left = 392
@@ -137,12 +136,13 @@ object MainForm: TMainForm
         Caption = 'Snippet'
         Width = 300
       end>
+    HideSelection = False
     TabOrder = 4
     ViewStyle = vsReport
     OnDblClick = LVMessagesDblClick
   end
   object SDDownload: TSaveDialog
-    left = 415
-    top = 163
+    Left = 415
+    Top = 163
   end
 end
