--- a/components/lazdebuggers/lazdebugtestbase/testdbgcontrolform.lfm
+++ b/components/lazdebuggers/lazdebugtestbase/testdbgcontrolform.lfm
@@ -1,5 +1,5 @@
 object DbgTestControlForm: TDbgTestControlForm
-  Left = 1354
+  Left = 984
   Height = 491
   Top = 267
   Width = 855
@@ -7,7 +7,7 @@ object DbgTestControlForm: TDbgTestControlForm
   Caption = 'TestControl'
   ClientHeight = 491
   ClientWidth = 855
-  LCLVersion = '2.1.0.0'
+  LCLVersion = '4.99.0.0'
   object Panel1: TPanel
     Left = 0
     Height = 44
@@ -27,10 +27,10 @@ object DbgTestControlForm: TDbgTestControlForm
       Left = 1
       Height = 19
       Top = 1
-      Width = 76
+      Width = 74
       Caption = 'Write Logs'
-      OnChange = CheckWriteLogsChange
       TabOrder = 0
+      OnChange = CheckWriteLogsChange
     end
     object Label1: TLabel
       AnchorSideLeft.Control = Panel1
@@ -47,16 +47,16 @@ object DbgTestControlForm: TDbgTestControlForm
       AnchorSideLeft.Control = CheckWriteLogs
       AnchorSideLeft.Side = asrBottom
       AnchorSideTop.Control = CheckWriteLogs
-      Left = 87
+      Left = 85
       Height = 19
       Top = 1
-      Width = 123
+      Width = 121
       BorderSpacing.Left = 10
       Caption = 'Write Logs On Error'
       Checked = True
-      OnChange = CheckWriteLogsChange
       State = cbChecked
       TabOrder = 1
+      OnChange = CheckWriteLogsChange
     end
     object EditLogDir: TFileNameEdit
       AnchorSideLeft.Control = Label1
@@ -81,27 +81,27 @@ object DbgTestControlForm: TDbgTestControlForm
       AnchorSideLeft.Control = WriteLogsOnErr
       AnchorSideLeft.Side = asrBottom
       AnchorSideTop.Control = CheckWriteLogs
-      Left = 216
+      Left = 212
       Height = 19
       Top = 1
-      Width = 91
+      Width = 89
       BorderSpacing.Left = 6
       Caption = 'Write Reports'
-      OnChange = CheckWriteReportChange
       TabOrder = 3
+      OnChange = CheckWriteReportChange
     end
     object CheckWriteOverview: TCheckBox
       AnchorSideLeft.Control = CheckWriteReport
       AnchorSideLeft.Side = asrBottom
       AnchorSideTop.Control = CheckWriteLogs
-      Left = 313
+      Left = 307
       Height = 19
       Top = 1
-      Width = 100
+      Width = 98
       BorderSpacing.Left = 6
       Caption = 'Write Overview'
-      OnChange = CheckWriteOverviewChange
       TabOrder = 4
+      OnChange = CheckWriteOverviewChange
     end
   end
   object Panel2: TPanel
@@ -148,12 +148,13 @@ object DbgTestControlForm: TDbgTestControlForm
       Top = 27
       Width = 223
       Align = alClient
+      HideSelection = False
       ReadOnly = True
       RightClickSelect = True
       StateImages = ilNodeStates
       TabOrder = 2
+      Options = [tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoReadOnly, tvoRightClickSelect, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips]
       OnMouseDown = chkTestsMouseDown
-      Options = [tvoAutoItemHeight, tvoHideSelection, tvoKeepCollapsedNodes, tvoReadOnly, tvoRightClickSelect, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips]
     end
   end
   object Splitter1: TSplitter
@@ -198,12 +199,13 @@ object DbgTestControlForm: TDbgTestControlForm
       Top = 27
       Width = 223
       Align = alClient
+      HideSelection = False
       ReadOnly = True
       RightClickSelect = True
       StateImages = ilNodeStates
       TabOrder = 1
+      Options = [tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoReadOnly, tvoRightClickSelect, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips]
       OnMouseDown = chkTestsMouseDown
-      Options = [tvoAutoItemHeight, tvoHideSelection, tvoKeepCollapsedNodes, tvoReadOnly, tvoRightClickSelect, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips]
     end
   end
   object Splitter2: TSplitter
@@ -282,12 +284,13 @@ object DbgTestControlForm: TDbgTestControlForm
       Top = 27
       Width = 223
       Align = alClient
+      HideSelection = False
       ReadOnly = True
       RightClickSelect = True
       StateImages = ilNodeStates
       TabOrder = 1
+      Options = [tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoReadOnly, tvoRightClickSelect, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips]
       OnMouseDown = chkTestsMouseDown
-      Options = [tvoAutoItemHeight, tvoHideSelection, tvoKeepCollapsedNodes, tvoReadOnly, tvoRightClickSelect, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips]
     end
   end
   object ilNodeStates: TImageList
