--- a/components/leakview/heaptrcview.lfm
+++ b/components/leakview/heaptrcview.lfm
@@ -8,18 +8,18 @@ object HeapTrcViewForm: THeapTrcViewForm
   ClientHeight = 444
   ClientWidth = 637
   FormStyle = fsStayOnTop
+  Position = poScreenCenter
+  LCLVersion = '4.99.0.0'
   OnCreate = FormCreate
   OnDestroy = FormDestroy
-  Position = poScreenCenter
-  LCLVersion = '1.9.0.0'
   object lblTrcFile: TLabel
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = edtTrcFileName
     AnchorSideTop.Side = asrCenter
     Left = 6
-    Height = 13
-    Top = 15
-    Width = 40
+    Height = 15
+    Top = 12
+    Width = 36
     BorderSpacing.Left = 6
     Caption = '.trc file'
     ParentColor = False
@@ -30,29 +30,29 @@ object HeapTrcViewForm: THeapTrcViewForm
     AnchorSideTop.Side = asrBottom
     Left = 6
     Height = 25
-    Top = 41
-    Width = 52
+    Top = 37
+    Width = 64
     AutoSize = True
     BorderSpacing.Left = 6
     BorderSpacing.Top = 6
     Caption = 'Update'
-    OnClick = btnUpdateClick
     TabOrder = 2
+    OnClick = btnUpdateClick
   end
   object chkStayOnTop: TCheckBox
     AnchorSideTop.Control = btnUpdate
     AnchorSideTop.Side = asrCenter
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    Left = 543
-    Height = 24
-    Top = 41
-    Width = 88
+    Left = 553
+    Height = 19
+    Top = 40
+    Width = 78
     Anchors = [akTop, akRight]
     BorderSpacing.Right = 6
     Caption = 'Stay on top'
-    OnChange = chkStayOnTopChange
     TabOrder = 6
+    OnChange = chkStayOnTopChange
   end
   object btnBrowse: TButton
     AnchorSideTop.Control = edtTrcFileName
@@ -61,31 +61,31 @@ object HeapTrcViewForm: THeapTrcViewForm
     AnchorSideBottom.Control = edtTrcFileName
     AnchorSideBottom.Side = asrBottom
     Left = 564
-    Height = 27
+    Height = 23
     Top = 8
     Width = 67
     Anchors = [akTop, akRight, akBottom]
     BorderSpacing.Left = 6
     BorderSpacing.Right = 6
     Caption = '...'
-    OnClick = btnBrowseClick
     TabOrder = 1
+    OnClick = btnBrowseClick
   end
   object chkUseRaw: TCheckBox
     AnchorSideLeft.Control = BtnResolve
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = btnUpdate
     AnchorSideTop.Side = asrCenter
-    Left = 248
-    Height = 24
-    Top = 41
-    Width = 101
+    Left = 281
+    Height = 19
+    Top = 40
+    Width = 90
     BorderSpacing.Left = 6
     Caption = 'Raw leak data'
     Checked = True
-    OnChange = chkUseRawChange
     State = cbChecked
     TabOrder = 5
+    OnChange = chkUseRawChange
   end
   object ctrlPanel: TPanel
     AnchorSideLeft.Control = Owner
@@ -96,32 +96,33 @@ object HeapTrcViewForm: THeapTrcViewForm
     AnchorSideBottom.Control = Owner
     AnchorSideBottom.Side = asrBottom
     Left = 6
-    Height = 366
-    Top = 72
+    Height = 370
+    Top = 68
     Width = 625
     Anchors = [akTop, akLeft, akRight, akBottom]
     BorderSpacing.Around = 6
     BevelOuter = bvNone
-    ClientHeight = 366
+    ClientHeight = 370
     ClientWidth = 625
     TabOrder = 7
     object trvTraceInfo: TTreeView
       AnchorSideTop.Side = asrBottom
       Left = 0
-      Height = 274
+      Height = 278
       Top = 6
       Width = 625
       Align = alClient
       BorderSpacing.Top = 6
+      HideSelection = False
       ReadOnly = True
       TabOrder = 0
+      Options = [tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoReadOnly, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips]
       OnDblClick = trvTraceInfoDblClick
-      Options = [tvoAutoItemHeight, tvoHideSelection, tvoKeepCollapsedNodes, tvoReadOnly, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips]
     end
     object memoSummary: TMemo
       Left = 0
       Height = 81
-      Top = 285
+      Top = 289
       Width = 625
       Align = alBottom
       ReadOnly = True
@@ -132,7 +133,7 @@ object HeapTrcViewForm: THeapTrcViewForm
       Cursor = crVSplit
       Left = 0
       Height = 5
-      Top = 280
+      Top = 284
       Width = 625
       Align = alBottom
       ResizeAnchor = akBottom
@@ -142,27 +143,27 @@ object HeapTrcViewForm: THeapTrcViewForm
     AnchorSideLeft.Control = btnUpdate
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = btnUpdate
-    Left = 64
+    Left = 76
     Height = 25
-    Top = 41
-    Width = 97
+    Top = 37
+    Width = 109
     AutoSize = True
     BorderSpacing.Left = 6
     Caption = 'Paste Clipboard'
-    OnClick = btnClipboardClick
     TabOrder = 3
+    OnClick = btnClipboardClick
   end
   object edtTrcFileName: TComboBox
     AnchorSideLeft.Control = lblTrcFile
     AnchorSideLeft.Side = asrBottom
     AnchorSideRight.Control = btnBrowse
-    Left = 52
-    Height = 27
+    Left = 48
+    Height = 23
     Top = 8
-    Width = 506
+    Width = 510
     Anchors = [akTop, akLeft, akRight]
     BorderSpacing.Around = 6
-    ItemHeight = 0
+    ItemHeight = 15
     TabOrder = 0
   end
   object BtnResolve: TButton
@@ -170,19 +171,19 @@ object HeapTrcViewForm: THeapTrcViewForm
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = btnUpdate
     AnchorSideTop.Side = asrCenter
-    Left = 167
+    Left = 191
     Height = 25
-    Top = 41
-    Width = 75
+    Top = 37
+    Width = 84
     AutoSize = True
     BorderSpacing.Left = 6
     Caption = 'BtnResolve'
-    OnClick = BtnResolveClick
     TabOrder = 4
+    OnClick = BtnResolveClick
   end
   object OpenDialog: TOpenDialog
     Options = [ofPathMustExist, ofFileMustExist, ofEnableSizing, ofViewDetail]
-    left = 579
-    top = 142
+    Left = 579
+    Top = 142
   end
 end
