--- a/debugger/frames/debugger_eventlog_options.lfm
+++ b/debugger/frames/debugger_eventlog_options.lfm
@@ -1,5 +1,7 @@
-inherited DebuggerEventLogOptionsFrame: TDebuggerEventLogOptionsFrame
+object DebuggerEventLogOptionsFrame: TDebuggerEventLogOptionsFrame
+  Left = 0
   Height = 329
+  Top = 0
   Width = 534
   ClientHeight = 329
   ClientWidth = 534
@@ -7,25 +9,25 @@ inherited DebuggerEventLogOptionsFrame: TDebuggerEventLogOptionsFrame
   Visible = False
   DesignLeft = 536
   DesignTop = 282
-  object gbGeneral: TGroupBox[0]
+  object gbGeneral: TGroupBox
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = Owner
     Left = 0
-    Height = 151
+    Height = 159
     Top = 0
     Width = 128
     AutoSize = True
     Caption = 'General'
-    ClientHeight = 133
+    ClientHeight = 139
     ClientWidth = 124
     TabOrder = 0
     object chkClearLogOnRun: TCheckBox
       AnchorSideLeft.Control = gbGeneral
       AnchorSideTop.Control = gbGeneral
       Left = 6
-      Height = 17
+      Height = 19
       Top = 6
-      Width = 94
+      Width = 103
       BorderSpacing.Around = 6
       Caption = 'Clear log on run'
       Checked = True
@@ -37,21 +39,21 @@ inherited DebuggerEventLogOptionsFrame: TDebuggerEventLogOptionsFrame
       AnchorSideTop.Control = chkClearLogOnRun
       AnchorSideTop.Side = asrBottom
       Left = 6
-      Height = 17
-      Top = 29
-      Width = 98
+      Height = 19
+      Top = 31
+      Width = 112
       BorderSpacing.Around = 6
       Caption = 'Limit linecount to'
-      OnChange = chkLimitLinecountChange
       TabOrder = 1
+      OnChange = chkLimitLinecountChange
     end
     object seLimitLinecount: TSpinEdit
       AnchorSideLeft.Control = chkLimitLinecount
       AnchorSideTop.Control = chkLimitLinecount
       AnchorSideTop.Side = asrBottom
       Left = 26
-      Height = 21
-      Top = 52
+      Height = 23
+      Top = 56
       Width = 92
       BorderSpacing.Left = 20
       BorderSpacing.Top = 6
@@ -60,7 +62,7 @@ inherited DebuggerEventLogOptionsFrame: TDebuggerEventLogOptionsFrame
       TabOrder = 2
     end
   end
-  object gbMessages: TGroupBox[1]
+  object gbMessages: TGroupBox
     AnchorSideLeft.Control = gbGeneral
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = Owner
@@ -69,13 +71,13 @@ inherited DebuggerEventLogOptionsFrame: TDebuggerEventLogOptionsFrame
     AnchorSideBottom.Control = gbGeneral
     AnchorSideBottom.Side = asrBottom
     Left = 134
-    Height = 151
+    Height = 159
     Top = 0
     Width = 400
     Anchors = [akTop, akLeft, akRight, akBottom]
     BorderSpacing.Left = 6
     Caption = 'Messages'
-    ClientHeight = 133
+    ClientHeight = 139
     ClientWidth = 396
     TabOrder = 1
     object cbMessages: TCheckListBox
@@ -86,7 +88,7 @@ inherited DebuggerEventLogOptionsFrame: TDebuggerEventLogOptionsFrame
       AnchorSideBottom.Control = gbMessages
       AnchorSideBottom.Side = asrBottom
       Left = 6
-      Height = 121
+      Height = 127
       Top = 6
       Width = 384
       Anchors = [akTop, akLeft, akRight, akBottom]
@@ -95,7 +97,7 @@ inherited DebuggerEventLogOptionsFrame: TDebuggerEventLogOptionsFrame
       TabOrder = 0
     end
   end
-  object gbColors: TGroupBox[2]
+  object gbColors: TGroupBox
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = gbGeneral
     AnchorSideTop.Side = asrBottom
@@ -104,13 +106,13 @@ inherited DebuggerEventLogOptionsFrame: TDebuggerEventLogOptionsFrame
     AnchorSideBottom.Control = Owner
     AnchorSideBottom.Side = asrBottom
     Left = 0
-    Height = 172
-    Top = 157
+    Height = 164
+    Top = 165
     Width = 534
     Anchors = [akTop, akLeft, akRight, akBottom]
     BorderSpacing.Top = 6
     Caption = 'Colors'
-    ClientHeight = 154
+    ClientHeight = 144
     ClientWidth = 530
     TabOrder = 2
     object ColorTree: TTreeView
@@ -122,35 +124,35 @@ inherited DebuggerEventLogOptionsFrame: TDebuggerEventLogOptionsFrame
       AnchorSideBottom.Control = gbColors
       AnchorSideBottom.Side = asrBottom
       Left = 6
-      Height = 119
-      Top = 29
+      Height = 107
+      Top = 31
       Width = 240
       Anchors = [akTop, akLeft, akBottom]
       AutoExpand = True
       BorderSpacing.Around = 6
       Constraints.MinWidth = 150
-      DefaultItemHeight = 15
+      HideSelection = False
       ReadOnly = True
       ScrollBars = ssAutoBoth
       ShowButtons = False
       ShowRoot = False
       TabOrder = 0
+      Options = [tvoAutoExpand, tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoReadOnly, tvoShowLines, tvoToolTips, tvoNoDoubleClickExpand, tvoThemedDraw]
       OnAdvancedCustomDrawItem = ColorTreeAdvancedCustomDrawItem
       OnChange = ColorTreeChange
       OnClick = ColorTreeClick
-      Options = [tvoAutoExpand, tvoAutoItemHeight, tvoHideSelection, tvoKeepCollapsedNodes, tvoReadOnly, tvoShowLines, tvoToolTips, tvoNoDoubleClickExpand, tvoThemedDraw]
     end
     object chkUseEventLogColors: TCheckBox
       AnchorSideLeft.Control = gbColors
       AnchorSideTop.Control = gbColors
       Left = 6
-      Height = 17
+      Height = 19
       Top = 6
-      Width = 127
+      Width = 139
       BorderSpacing.Around = 6
       Caption = 'chkUseEventLogColors'
-      OnChange = chkUseEventLogColorsChange
       TabOrder = 1
+      OnChange = chkUseEventLogColorsChange
     end
     object ForegroundColorBox: TColorBox
       AnchorSideLeft.Control = ColorTree
@@ -161,7 +163,7 @@ inherited DebuggerEventLogOptionsFrame: TDebuggerEventLogOptionsFrame
       AnchorSideRight.Side = asrBottom
       Left = 252
       Height = 22
-      Top = 46
+      Top = 49
       Width = 272
       DefaultColorColor = clWhite
       Style = [cbStandardColors, cbExtendedColors, cbSystemColors, cbIncludeDefault, cbCustomColor, cbPrettyNames, cbCustomColors]
@@ -171,8 +173,8 @@ inherited DebuggerEventLogOptionsFrame: TDebuggerEventLogOptionsFrame
       BorderSpacing.Right = 6
       BorderSpacing.Bottom = 6
       ItemHeight = 16
-      OnChange = GeneralColorBoxOnChange
       TabOrder = 2
+      OnChange = GeneralColorBoxOnChange
     end
     object BackGroundColorBox: TColorBox
       AnchorSideLeft.Control = ColorTree
@@ -184,7 +186,7 @@ inherited DebuggerEventLogOptionsFrame: TDebuggerEventLogOptionsFrame
       AnchorSideBottom.Side = asrBottom
       Left = 252
       Height = 22
-      Top = 91
+      Top = 95
       Width = 272
       DefaultColorColor = clWhite
       Style = [cbStandardColors, cbExtendedColors, cbSystemColors, cbIncludeDefault, cbCustomColor, cbPrettyNames, cbCustomColors]
@@ -194,17 +196,17 @@ inherited DebuggerEventLogOptionsFrame: TDebuggerEventLogOptionsFrame
       BorderSpacing.Right = 6
       BorderSpacing.Bottom = 6
       ItemHeight = 16
-      OnChange = GeneralColorBoxOnChange
       TabOrder = 3
+      OnChange = GeneralColorBoxOnChange
     end
     object ForeGroundLabel: TLabel
       AnchorSideLeft.Control = ColorTree
       AnchorSideLeft.Side = asrBottom
       AnchorSideTop.Control = ColorTree
       Left = 252
-      Height = 14
-      Top = 29
-      Width = 83
+      Height = 15
+      Top = 31
+      Width = 91
       BorderSpacing.Left = 6
       Caption = 'ForeGroundLabel'
       ParentColor = False
@@ -215,9 +217,9 @@ inherited DebuggerEventLogOptionsFrame: TDebuggerEventLogOptionsFrame
       AnchorSideTop.Control = ForegroundColorBox
       AnchorSideTop.Side = asrBottom
       Left = 252
-      Height = 14
-      Top = 74
-      Width = 83
+      Height = 15
+      Top = 77
+      Width = 93
       BorderSpacing.Left = 6
       BorderSpacing.Top = 6
       Caption = 'BackGroundLabel'
