--- a/examples/xmlreader/testxmlreaderunit.lfm
+++ b/examples/xmlreader/testxmlreaderunit.lfm
@@ -7,30 +7,31 @@ object XMLReaderForm: TXMLReaderForm
   Caption = 'XML reader test'
   ClientHeight = 381
   ClientWidth = 732
+  Position = poScreenCenter
+  LCLVersion = '4.99.0.0'
   OnClose = FormClose
   OnCreate = FormCreate
-  Position = poScreenCenter
-  LCLVersion = '2.3.0.0'
   object TreeView1: TTreeView
     Left = 0
-    Height = 309
-    Top = 72
+    Height = 318
+    Top = 63
     Width = 342
     Align = alLeft
     AutoExpand = True
+    HideSelection = False
     ReadOnly = True
     TabOrder = 0
+    Options = [tvoAutoExpand, tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoReadOnly, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips]
     OnClick = TreeView1Click
-    Options = [tvoAutoExpand, tvoAutoItemHeight, tvoHideSelection, tvoKeepCollapsedNodes, tvoReadOnly, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips]
   end
   object Panel1: TPanel
     Left = 0
-    Height = 72
+    Height = 63
     Top = 0
     Width = 732
     Align = alTop
     AutoSize = True
-    ClientHeight = 72
+    ClientHeight = 63
     ClientWidth = 732
     TabOrder = 1
     object BitBtn1: TBitBtn
@@ -38,10 +39,10 @@ object XMLReaderForm: TXMLReaderForm
       AnchorSideTop.Side = asrBottom
       AnchorSideRight.Control = Panel1
       AnchorSideRight.Side = asrBottom
-      Left = 655
-      Height = 31
-      Top = 34
-      Width = 70
+      Left = 651
+      Height = 28
+      Top = 28
+      Width = 74
       Anchors = [akTop, akRight]
       AutoSize = True
       BorderSpacing.Around = 6
@@ -59,16 +60,16 @@ object XMLReaderForm: TXMLReaderForm
         0000EEEEEEEEEEE000EEEE000000EEEEEEEEEEEEEEEEEE000000EEEEEEEEEEEE
         EEEEEE000000EEEEEEEEEEEEEEEEEE000000
       }
-      OnClick = BitBtn1Click
       TabOrder = 0
+      OnClick = BitBtn1Click
     end
     object Label1: TLabel
       AnchorSideLeft.Control = Panel1
       AnchorSideTop.Control = Panel1
       Left = 7
-      Height = 21
+      Height = 15
       Top = 7
-      Width = 76
+      Width = 51
       BorderSpacing.Around = 6
       Caption = 'File name'
     end
@@ -77,8 +78,8 @@ object XMLReaderForm: TXMLReaderForm
       AnchorSideTop.Control = Label1
       AnchorSideTop.Side = asrBottom
       Left = 13
-      Height = 29
-      Top = 34
+      Height = 23
+      Top = 28
       Width = 620
       FileName = 'test.xml'
       DialogOptions = []
@@ -97,26 +98,26 @@ object XMLReaderForm: TXMLReaderForm
   end
   object Splitter1: TSplitter
     Left = 342
-    Height = 309
-    Top = 72
+    Height = 318
+    Top = 63
     Width = 5
   end
   object Panel2: TPanel
     Left = 347
-    Height = 309
-    Top = 72
+    Height = 318
+    Top = 63
     Width = 385
     Align = alClient
     Caption = 'Panel2'
-    ClientHeight = 309
+    ClientHeight = 318
     ClientWidth = 385
     TabOrder = 3
     object ListView1: TListView
       AnchorSideTop.Control = Edit2
       AnchorSideTop.Side = asrBottom
       Left = 1
-      Height = 177
-      Top = 131
+      Height = 210
+      Top = 107
       Width = 383
       Align = alBottom
       Anchors = [akTop, akLeft, akRight, akBottom]
@@ -138,9 +139,9 @@ object XMLReaderForm: TXMLReaderForm
       AnchorSideLeft.Control = Panel2
       AnchorSideTop.Control = Panel2
       Left = 7
-      Height = 21
+      Height = 15
       Top = 7
-      Width = 91
+      Width = 62
       BorderSpacing.Around = 6
       Caption = 'Node name'
     end
@@ -149,9 +150,9 @@ object XMLReaderForm: TXMLReaderForm
       AnchorSideTop.Control = Edit1
       AnchorSideTop.Side = asrBottom
       Left = 7
-      Height = 21
-      Top = 69
-      Width = 90
+      Height = 15
+      Top = 57
+      Width = 60
       BorderSpacing.Around = 6
       Caption = 'Node value'
     end
@@ -162,8 +163,8 @@ object XMLReaderForm: TXMLReaderForm
       AnchorSideRight.Control = Panel2
       AnchorSideRight.Side = asrBottom
       Left = 13
-      Height = 29
-      Top = 34
+      Height = 23
+      Top = 28
       Width = 365
       Anchors = [akTop, akLeft, akRight]
       BorderSpacing.Around = 6
@@ -177,8 +178,8 @@ object XMLReaderForm: TXMLReaderForm
       AnchorSideRight.Control = Panel2
       AnchorSideRight.Side = asrBottom
       Left = 13
-      Height = 29
-      Top = 96
+      Height = 23
+      Top = 78
       Width = 365
       Anchors = [akTop, akLeft, akRight]
       BorderSpacing.Around = 6
