--- a/ide/findoverloadsdlg.lfm
+++ b/ide/findoverloadsdlg.lfm
@@ -7,15 +7,23 @@ object FindOverloadsDialog: TFindOverloadsDialog
   Caption = 'FindOverloadsDialog'
   ClientHeight = 338
   ClientWidth = 548
+  Position = poScreenCenter
+  LCLVersion = '4.99.0.0'
   OnCreate = FormCreate
   OnDestroy = FormDestroy
-  Position = poScreenCenter
-  LCLVersion = '0.9.27'
   object ButtonPanel1: TButtonPanel
     Left = 6
-    Height = 44
-    Top = 288
+    Height = 34
+    Top = 298
     Width = 536
+    OKButton.Name = 'OKButton'
+    OKButton.DefaultCaption = True
+    HelpButton.Name = 'HelpButton'
+    HelpButton.DefaultCaption = True
+    CloseButton.Name = 'CloseButton'
+    CloseButton.DefaultCaption = True
+    CancelButton.Name = 'CancelButton'
+    CancelButton.DefaultCaption = True
     TabOrder = 0
     ShowButtons = [pbOK, pbCancel, pbClose]
   end
@@ -27,51 +35,51 @@ object FindOverloadsDialog: TFindOverloadsDialog
     Align = alTop
     BorderSpacing.Around = 6
     Caption = 'CurGroupBox'
-    ClientHeight = 53
+    ClientHeight = 52
     ClientWidth = 532
     TabOrder = 1
     object CurTreeView: TTreeView
       Left = 0
-      Height = 53
+      Height = 52
       Top = 0
       Width = 532
       Align = alClient
-      DefaultItemHeight = 19
       TabOrder = 0
     end
   end
   object ResultsGroupBox: TGroupBox
     Left = 6
-    Height = 198
+    Height = 208
     Top = 84
     Width = 536
     Align = alClient
     BorderSpacing.Around = 6
     Caption = 'ResultsGroupBox'
-    ClientHeight = 179
+    ClientHeight = 188
     ClientWidth = 532
     TabOrder = 2
     object ResultsTreeView: TTreeView
       Left = 0
-      Height = 136
+      Height = 148
       Top = 0
       Width = 532
       Align = alClient
-      DefaultItemHeight = 19
+      HideSelection = False
       TabOrder = 0
+      Options = [tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips, tvoThemedDraw]
     end
     object ResultsProgressBar: TProgressBar
       Left = 0
       Height = 21
-      Top = 136
+      Top = 148
       Width = 532
       Align = alBottom
       TabOrder = 1
     end
     object SearchAllCheckBox: TCheckBox
       Left = 0
-      Height = 22
-      Top = 157
+      Height = 19
+      Top = 169
       Width = 532
       Align = alBottom
       Caption = 'SearchAllCheckBox'
