--- a/ide/idecontexthelpedit.lfm
+++ b/ide/idecontexthelpedit.lfm
@@ -12,126 +12,126 @@ object ContextHelpEditorDlg: TContextHelpEditorDlg
   ChildSizing.EnlargeHorizontal = crsScaleChilds
   ClientHeight = 515
   ClientWidth = 655
+  LCLVersion = '4.99.0.0'
   OnClose = FormClose
   OnCreate = FormCreate
   OnDestroy = FormDestroy
-  LCLVersion = '0.9.29'
   object WindowControlsGroupBox: TGroupBox
     Left = 6
-    Height = 465
+    Height = 471
     Top = 6
     Width = 305
     Align = alLeft
     BorderSpacing.Around = 6
     Caption = 'WindowControlsGroupBox'
-    ClientHeight = 444
-    ClientWidth = 297
+    ClientHeight = 451
+    ClientWidth = 301
     TabOrder = 0
     object ControlsTreeView: TTreeView
       AnchorSideBottom.Control = OpenDeclarationBitBtn
       Left = 6
-      Height = 317
+      Height = 326
       Top = 6
-      Width = 285
+      Width = 289
       Align = alTop
       Anchors = [akTop, akLeft, akRight, akBottom]
       BorderSpacing.Around = 6
-      DefaultItemHeight = 19
+      HideSelection = False
       ParentShowHint = False
       ReadOnly = True
       ShowHint = True
       TabOrder = 0
+      Options = [tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoReadOnly, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips, tvoThemedDraw]
       OnShowHint = ControlsTreeViewShowHint
-      Options = [tvoAutoItemHeight, tvoHideSelection, tvoKeepCollapsedNodes, tvoReadOnly, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips, tvoThemedDraw]
     end
     object CreateHelpNodeForControlButton: TButton
       Left = 6
       Height = 35
-      Top = 362
-      Width = 285
+      Top = 369
+      Width = 289
       Align = alBottom
       BorderSpacing.Around = 6
       Caption = 'CreateHelpNodeForControlButton'
-      OnClick = CreateHelpNodeForControlButtonClick
       TabOrder = 1
+      OnClick = CreateHelpNodeForControlButtonClick
     end
     object TestButton: TButton
       Left = 6
       Height = 35
-      Top = 403
-      Width = 285
+      Top = 410
+      Width = 289
       Align = alBottom
       BorderSpacing.Around = 6
       Caption = 'TestButton'
-      OnClick = TestButtonClick
       TabOrder = 2
+      OnClick = TestButtonClick
     end
     object OpenDeclarationBitBtn: TBitBtn
       AnchorSideLeft.Control = WindowControlsGroupBox
       AnchorSideRight.Side = asrBottom
       AnchorSideBottom.Control = CreateHelpNodeForControlButton
       Left = 6
-      Height = 27
-      Top = 329
-      Width = 178
+      Height = 25
+      Top = 338
+      Width = 147
       Anchors = [akLeft, akBottom]
       AutoSize = True
       BorderSpacing.Around = 6
       Caption = 'OpenDeclarationBitBtn'
-      OnClick = OpenDeclarationBitBtnClick
       ParentShowHint = False
       ShowHint = True
       TabOrder = 3
+      OnClick = OpenDeclarationBitBtnClick
     end
   end
   object NodesGroupBox: TGroupBox
     Left = 328
-    Height = 465
+    Height = 471
     Top = 6
     Width = 321
     Align = alClient
     BorderSpacing.Around = 6
     Caption = 'NodesGroupBox'
-    ClientHeight = 444
-    ClientWidth = 313
+    ClientHeight = 451
+    ClientWidth = 317
     TabOrder = 1
     object HelpNodesTreeView: TTreeView
       Left = 6
-      Height = 247
+      Height = 254
       Top = 6
-      Width = 301
+      Width = 305
       Align = alClient
       BorderSpacing.Around = 6
-      DefaultItemHeight = 19
+      HideSelection = False
       ReadOnly = True
       TabOrder = 0
+      Options = [tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoReadOnly, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips, tvoThemedDraw]
       OnSelectionChanged = HelpNodesTreeViewSelectionChanged
-      Options = [tvoAutoItemHeight, tvoHideSelection, tvoKeepCollapsedNodes, tvoReadOnly, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips, tvoThemedDraw]
     end
     object HelpNodePropertiesGroupBox: TGroupBox
       Left = 6
       Height = 179
-      Top = 259
-      Width = 301
+      Top = 266
+      Width = 305
       Align = alBottom
       BorderSpacing.Around = 6
       Caption = 'HelpNodePropertiesGroupBox'
-      ClientHeight = 158
-      ClientWidth = 293
+      ClientHeight = 159
+      ClientWidth = 301
       TabOrder = 1
       object NodeNameLabel: TLabel
         Left = 10
-        Height = 18
+        Height = 15
         Top = 10
-        Width = 45
+        Width = 35
         Caption = 'Name:'
         ParentColor = False
       end
       object NodePathLabel: TLabel
         Left = 10
-        Height = 18
+        Height = 15
         Top = 40
-        Width = 36
+        Width = 27
         Caption = 'Path:'
         ParentColor = False
       end
@@ -139,27 +139,27 @@ object ContextHelpEditorDlg: TContextHelpEditorDlg
         AnchorSideRight.Control = HelpNodePropertiesGroupBox
         AnchorSideRight.Side = asrBottom
         Left = 6
-        Height = 22
+        Height = 19
         Top = 71
-        Width = 281
+        Width = 289
         Anchors = [akTop, akLeft, akRight]
         BorderSpacing.Around = 6
         Caption = 'NodeHasHelpCheckBox'
-        OnEditingDone = NodeHasHelpCheckBoxEditingDone
         TabOrder = 0
+        OnEditingDone = NodeHasHelpCheckBoxEditingDone
       end
       object NodeNameEdit: TEdit
         AnchorSideRight.Control = HelpNodePropertiesGroupBox
         AnchorSideRight.Side = asrBottom
         Left = 70
-        Height = 27
+        Height = 23
         Top = 5
-        Width = 217
+        Width = 225
         Anchors = [akTop, akLeft, akRight]
         BorderSpacing.Around = 6
-        OnEditingDone = NodeNameEditEditingDone
         TabOrder = 1
         Text = 'NodeNameEdit'
+        OnEditingDone = NodeNameEditEditingDone
       end
       object NodePathEdit: TEdit
         AnchorSideTop.Control = NodeNameEdit
@@ -167,27 +167,27 @@ object ContextHelpEditorDlg: TContextHelpEditorDlg
         AnchorSideRight.Control = HelpNodePropertiesGroupBox
         AnchorSideRight.Side = asrBottom
         Left = 70
-        Height = 27
-        Top = 38
-        Width = 217
+        Height = 23
+        Top = 34
+        Width = 225
         Anchors = [akTop, akLeft, akRight]
         BorderSpacing.Around = 6
-        OnEditingDone = NodePathEditEditingDone
         TabOrder = 2
         Text = 'NodePathEdit'
+        OnEditingDone = NodePathEditEditingDone
       end
       object NodeIsRootCheckBox: TCheckBox
         AnchorSideRight.Control = HelpNodePropertiesGroupBox
         AnchorSideRight.Side = asrBottom
         Left = 6
-        Height = 22
+        Height = 19
         Top = 100
-        Width = 281
+        Width = 289
         Anchors = [akTop, akLeft, akRight]
         BorderSpacing.Around = 6
         Caption = 'NodeIsRootCheckBox'
-        OnEditingDone = NodeIsRootCheckBoxEditingDone
         TabOrder = 3
+        OnEditingDone = NodeIsRootCheckBoxEditingDone
       end
       object FullPathEdit: TEdit
         AnchorSideTop.Control = NodeIsRootCheckBox
@@ -195,9 +195,9 @@ object ContextHelpEditorDlg: TContextHelpEditorDlg
         AnchorSideRight.Control = HelpNodePropertiesGroupBox
         AnchorSideRight.Side = asrBottom
         Left = 6
-        Height = 27
-        Top = 128
-        Width = 281
+        Height = 23
+        Top = 125
+        Width = 289
         Anchors = [akTop, akLeft, akRight]
         BorderSpacing.Around = 6
         ReadOnly = True
@@ -208,21 +208,25 @@ object ContextHelpEditorDlg: TContextHelpEditorDlg
   end
   object Splitter1: TSplitter
     Left = 317
-    Height = 465
+    Height = 471
     Top = 6
     Width = 5
   end
   object ButtonPanel: TButtonPanel
     Left = 6
-    Height = 32
-    Top = 477
+    Height = 26
+    Top = 483
     Width = 643
     OKButton.Name = 'OKButton'
+    OKButton.DefaultCaption = True
     HelpButton.Name = 'HelpButton'
+    HelpButton.DefaultCaption = True
     HelpButton.Enabled = False
     CloseButton.Name = 'CloseButton'
+    CloseButton.DefaultCaption = True
     CloseButton.Enabled = False
     CancelButton.Name = 'CancelButton'
+    CancelButton.DefaultCaption = True
     TabOrder = 3
     ShowButtons = [pbOK, pbCancel]
     ShowBevel = False
