--- a/ide/newdialog.lfm
+++ b/ide/newdialog.lfm
@@ -9,10 +9,10 @@ object NewOtherDialog: TNewOtherDialog
   ClientWidth = 741
   Constraints.MinHeight = 100
   Constraints.MinWidth = 450
+  Position = poScreenCenter
+  LCLVersion = '4.99.0.0'
   OnClose = FormClose
   OnCreate = FormCreate
-  Position = poScreenCenter
-  LCLVersion = '1.9.0.0'
   object Panel1: TPanel
     Left = 6
     Height = 390
@@ -31,12 +31,13 @@ object NewOtherDialog: TNewOtherDialog
       Width = 295
       Align = alClient
       ExpandSignSize = 10
+      HideSelection = False
       ReadOnly = True
       ScrollBars = ssAutoBoth
       TabOrder = 0
+      Options = [tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoReadOnly, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips, tvoThemedDraw]
       OnDblClick = OkButtonClick
       OnSelectionChanged = ItemsTreeViewSelectionChanged
-      Options = [tvoAutoItemHeight, tvoHideSelection, tvoKeepCollapsedNodes, tvoReadOnly, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips, tvoThemedDraw]
     end
     object DescriptionGroupBox: TGroupBox
       AnchorSideLeft.Control = ItemsTreeView
@@ -50,13 +51,13 @@ object NewOtherDialog: TNewOtherDialog
       Align = alRight
       Caption = 'DescriptionGroupBox'
       ClientHeight = 370
-      ClientWidth = 427
+      ClientWidth = 425
       TabOrder = 1
       object DescriptionLabel: TLabel
         Left = 6
-        Height = 19
+        Height = 15
         Top = 6
-        Width = 415
+        Width = 413
         Align = alTop
         BorderSpacing.Around = 6
         Caption = 'DescriptionLabel'
@@ -72,9 +73,9 @@ object NewOtherDialog: TNewOtherDialog
         AnchorSideBottom.Control = DescriptionGroupBox
         AnchorSideBottom.Side = asrBottom
         Left = 6
-        Height = 320
-        Top = 62
-        Width = 415
+        Height = 308
+        Top = 56
+        Width = 413
         Anchors = [akTop, akLeft, akRight, akBottom]
         BorderSpacing.Around = 6
         Columns = <        
@@ -90,6 +91,7 @@ object NewOtherDialog: TNewOtherDialog
         ReadOnly = True
         RowSelect = True
         ScrollBars = ssAutoBoth
+        SortColumn = 0
         SortType = stText
         TabOrder = 1
         ViewStyle = vsReport
@@ -102,13 +104,13 @@ object NewOtherDialog: TNewOtherDialog
         AnchorSideRight.Control = DescriptionGroupBox
         AnchorSideRight.Side = asrBottom
         Left = 6
-        Height = 25
-        Top = 31
-        Width = 415
+        Height = 23
+        Top = 27
+        Width = 413
         ButtonWidth = 23
-        NumGlyphs = 1
         Anchors = [akTop, akLeft, akRight]
         BorderSpacing.Around = 6
+        NumGlyphs = 1
         MaxLength = 0
         TabOrder = 0
         FilteredListview = InheritableComponentsListView
