--- a/packager/interpkgconflictfiles.lfm
+++ b/packager/interpkgconflictfiles.lfm
@@ -5,14 +5,14 @@ object PGIPConflictsDialog: TPGIPConflictsDialog
   Width = 469
   ClientHeight = 424
   ClientWidth = 469
+  Position = poScreenCenter
+  LCLVersion = '4.99.0.0'
   OnClose = FormClose
   OnCreate = FormCreate
-  Position = poScreenCenter
-  LCLVersion = '1.5'
   object ButtonPanel1: TButtonPanel
     Left = 6
-    Height = 36
-    Top = 382
+    Height = 34
+    Top = 384
     Width = 457
     OKButton.Name = 'OKButton'
     OKButton.DefaultCaption = True
@@ -27,24 +27,24 @@ object PGIPConflictsDialog: TPGIPConflictsDialog
   end
   object ConflictsTreeView: TTreeView
     Left = 6
-    Height = 370
+    Height = 372
     Top = 6
     Width = 457
     Align = alClient
     BorderSpacing.Around = 6
-    DefaultItemHeight = 18
+    HideSelection = False
     ReadOnly = True
     TabOrder = 1
+    Options = [tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoReadOnly, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips, tvoThemedDraw]
     OnAdvancedCustomDrawItem = ConflictsTreeViewAdvancedCustomDrawItem
     OnMouseDown = ConflictsTreeViewMouseDown
-    Options = [tvoAutoItemHeight, tvoHideSelection, tvoKeepCollapsedNodes, tvoReadOnly, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips, tvoThemedDraw]
   end
   object IDEDialogLayoutStorage1: TIDEDialogLayoutStorage
-    left = 161
-    top = 104
+    Left = 161
+    Top = 104
   end
   object ImageList1: TImageList
-    left = 290
-    top = 104
+    Left = 290
+    Top = 104
   end
 end
